--- a/_c8oProject/sequences/u_create_ods.yaml
+++ b/_c8oProject/sequences/u_create_ods.yaml
@@ -8,7 +8,7 @@ comment: Create a new Calc document fr om a structured JSON.
         - java.lang.String: 
           - ↑value: 1754002069249
         - java.lang.String: 
-          - ↑value: ./rows/array
+          - ↑value: ./rows/object
   ↓jThen [steps.ThenStep-1754002069255]: 
     ↓markers [steps.JsonSourceStep-1754002069258]: 
       sourceDefinition: 
@@ -18,7 +18,7 @@ comment: Create a new Calc document fr om a structured JSON.
             - java.lang.String: 
               - ↑value: 1754002069249
             - java.lang.String: 
-              - ↑value: ./rows/array
+              - ↑value: ./rows/object
       variableName: o_rows
   ↓jElse [steps.ElseStep-1754002069261]: 
     ↓markers [steps.JsonSourceStep-1754002069264]: 
@@ -182,7 +182,7 @@ comment: Create a new Calc document fr om a structured JSON.
     			
     			            // Détection et conversion des types
     			            if (type === "number") {
-    			                cell.setDoubleValue(valeur);
+    			                cell.setDoubleValue(valeur*1);
     			            } else if (type === "boolean") {
     			                cell.setBooleanValue(!!valeur);
     			            } else if (type === "date") {
